@@ -1,3 +1,7 @@
+2006-10-03 Kimmo
+ PATCH: [ 1569389 ] Manual: fix translations part
+  Manual: Locales.xml
+
 2006-10-02 Tim
  PATCH: [ 1568943 ] Manual: Shows error for wrong "withads" argument
   Manual/build: build_html.bat
